vlib/v/parser/tests/expr_evaluated_but_not_used_b.out
vlib/v/parser/tests/expr_evaluated_but_not_used_b.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     22
      |     ~~
    3 | }
